log
Thu, Mar 20, 2025  5:15:04 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:50:56 PM: 
 exercises.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:99:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '}' token
 }
 ^
exercises.c:97:11: error: unused variable 'Paux' [-Werror=unused-variable]
    Stack* Paux = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04d4d81
